import java.nio.file.Paths

group 'org.glavo'
version '3.0-beta4-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.9

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

jar {
    manifest {
        attributes 'Implementation-Version': '1.2',
                'Main-Class': 'org.glavo.viewer.gui.Viewer'
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

task run(type: JavaExec, dependsOn: jar) {
    main = "-jar"
    args jar.archivePath
}
